# CS008-Final-Presentation

./: ApplicationSelector.cpp  ApplicationSelector.h  CMakeLists.txt  FiniteStateMachine.cpp  FiniteStateMachine.h  main.cpp
Applications/Autocorrect/: AutocorrectApp.cpp  AutocorrectApp.h  CompareWords.h  FileReader.cpp  FileReader.h  Heap.cpp  Heap.h  Word.cpp  Word.h  WordSort.cpp  WordSort.h
Applications/Minesweeper/: Backtracking.cpp  Backtracking.h  MinesweeperApp.cpp  MinesweeperApp.h  MinesweeperModel.cpp  MinesweeperModel.h  MinesweeperNode.cpp  MinesweeperNode.h
Applications/Sliding Puzzle/: CompareNodes.h  Model.cpp  Model.h  Node.h  SlidingPuzzleApp.cpp  SlidingPuzzleApp.h  SlidingPuzzleSolver.cpp  SlidingPuzzleSolver.h  SubGoal.h
